--- a/src/dbt-project/models/source/sources.yml
+++ b/src/dbt-project/models/source/sources.yml
@@ -5,6 +5,8 @@ sources:
     tables:
         - name: listings
           identifier: raw_listings
+        - name: emp
+          identifier: employee
         - name: hosts
           identifier: raw_hosts
         - name: reviews
@@ -12,3 +14,4 @@ sources:
           freshness:
             warn_after: {count: 1, period: hour}
             #error_after: {count: 24, period: hour}
+
