--- a/src/dbt-project/models/source/sources.yml
+++ b/src/dbt-project/models/source/sources.yml
@@ -1,17 +1,10 @@
 version: 2
 sources:
-  - name: airbnb
-    schema: raw
+  - name: customer
+    schema: dev
     tables:
-        - name: listings
-          identifier: raw_listings
+        - name: emp_fact
+          identifier: emp_fact
         - name: emp
           identifier: employee
-        - name: hosts
-          identifier: raw_hosts
-        - name: reviews
-          identifier: raw_reviews
-          freshness:
-            warn_after: {count: 1, period: hour}
-            #error_after: {count: 24, period: hour}
 
